--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,4 +18,23 @@
   </li>
 </ul>
 
+<p-table [value]="cars">
+  <ng-template pTemplate="header">
+      <tr>
+          <th>Vin</th>
+          <th>Year</th>
+          <th>Brand</th>
+          <th>Color</th>
+      </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-car>
+      <tr>
+          <td>{{car.vin}}</td>
+          <td>{{car.year}}</td>
+          <td>{{car.brand}}</td>
+          <td>{{car.color}}</td>
+      </tr>
+  </ng-template>
+</p-table>
+
 <router-outlet></router-outlet>
